--- a/16_람다식/.project
+++ b/16_람다식/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>99_코딩테스트</name>
+	<name>16_람다식</name>
 	<comment></comment>
 	<projects>
 	</projects>
